--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 />
 <meta
   property="og:image"
-  content="4cf52c6a7509575b8d4a1901b9ed1b1d.png"
+  content="https://cdn.discordapp.com/avatars/763341254603571221/4cf52c6a7509575b8d4a1901b9ed1b1d.png?size=1024"
 />
 <meta property="og:image:type" content="4cf52c6a7509575b8d4a1901b9ed1b1d.png" />
 <meta property="og:image:width" content="1280" />
