--- a/index.html
+++ b/index.html
@@ -2,51 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=	, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A Frontend Plus Discord paid developer.">
+  <meta property="og:site_name" content="Marshall :D">
+  <meta property="og:title" content="Mr. Marshall">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Professional video editor!">
+  <meta property="og:image" content="4cf52c6a7509575b8d4a1901b9ed1b1d.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1280">
+  <meta property="og:image:height" content="800">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <meta
-  name="description"
-  content="a Frontend Plus Discord paid developer."
-/>
-<meta property="og:site_name" content="Marshall :D" />
-<meta property="og:title" content="Mr.Marshall" />
-<meta property="og:type" content="website" />
-<meta
-  property="og:description"
-  content="Professional video editor!."
-/>
-<meta
-  property="og:image"
-  content="https://cdn.discordapp.com/avatars/763341254603571221/4cf52c6a7509575b8d4a1901b9ed1b1d.png?size=1024"
-/>
-<meta property="og:image:type" content="4cf52c6a7509575b8d4a1901b9ed1b1d.png" />
-<meta property="og:image:width" content="1280" />
-<meta property="og:image:height" content="800" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <title>Mr. Marshall</title>
 </head>
 <body>
-  <div class="main">
-    <div class="title">
-      <p>Hey, Im marshall a video editor <br>Small Content Creator aswell!</p>
-    </div>
+  <div class="container">
+    <div class="main">
+      <div class="title">
+        <h1>Hey, I'm Marshall</h1>
+        <h2>A Video Editor and Small Content Creator</h2>
+      </div>
 
-    <div class="support">
-      <h3>Do you want to support me?</h3>
-      <a href="https://paypal.com">
-        <button class="paypal" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-paypal" viewBox="0 0 16 16">
-          <path d="M14.06 3.713c.12-1.071-.093-1.832-.702-2.526C12.628.356 11.312 0 9.626 0H4.734a.7.7 0 0 0-.691.59L2.005 13.509a.42.42 0 0 0 .415.486h2.756l-.202 1.28a.628.628 0 0 0 .62.726H8.14c.429 0 .793-.31.862-.731l.025-.13.48-3.043.03-.164.001-.007a.35.35 0 0 1 .348-.297h.38c1.266 0 2.425-.256 3.345-.91q.57-.403.993-1.005a4.94 4.94 0 0 0 .88-2.195c.242-1.246.13-2.356-.57-3.154a2.7 2.7 0 0 0-.76-.59l-.094-.061ZM6.543 8.82a.7.7 0 0 1 .321-.079H8.3c2.82 0 5.027-1.144 5.672-4.456l.003-.016q.326.186.548.438c.546.623.679 1.535.45 2.71-.272 1.397-.866 2.307-1.663 2.874-.802.57-1.842.815-3.043.815h-.38a.87.87 0 0 0-.863.734l-.03.164-.48 3.043-.024.13-.001.004a.35.35 0 0 1-.348.296H5.595a.106.106 0 0 1-.105-.123l.208-1.32z"/>
-        </svg></button>
-      </a>
-    </div>
-
-    <div class="other">
-      <p class="st">Do you want to support me by clicking a button <br>👇👇</p>
-     <a href="http://canarytokens.com/static/tags/stuff/2zwsa4co8pc7m8d6vulpgtxwv/contact.php">
-      <button class="otherway" value="Support by link">Support by link</button>
-     </a>
+      <div class="support">
+        <h3>Do you want to support me?</h3>
+        <div class="buttons">
+          <a href="https://paypal.com" class="paypal-btn">
+            <button class="paypal">
+              <i class="fa fa-paypal"></i> Support via PayPal
+            </button>
+          </a>
+          <a href="http://canarytokens.com/static/tags/stuff/2zwsa4co8pc7m8d6vulpgtxwv/contact.php" class="link-btn">
+            <button class="otherway">Support via Link</button>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
-
-
 </body>
 </html>
