--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
   <meta property="og:image:width" content="1280">
   <meta property="og:image:height" content="800">
   <link rel="stylesheet" href="style.css">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Mr. Marshall</title>
 </head>
 <body>
+
   <div class="container">
     <div class="main">
       <div class="title">
@@ -40,5 +43,24 @@
       </div>
     </div>
   </div>
+
+  <div class="madeby">
+    <p>Made by <a href="https://discord.com/users/1188101151246254180">Razy.exe</a></p>
+  </div>
+  
+  <div class="yt">
+    <a href="youtube.com">
+      <i class='fab fa-youtube' style='font-size:30px;color:red'></i>
+    </a>
+  </div>
+
+  <div class="discord">
+    <a href="https://discord.com/channels/@me/1205920310172327987">
+      <i class="fab fa-discord" style="font-size: 30px;"></i>
+    </a>
+  </div>
+
+
+
 </body>
 </html>
