--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   <meta property="og:image:width" content="1280">
   <meta property="og:image:height" content="800">
   <link rel="stylesheet" href="style.css">
-  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="icon" href= 
+"https://yt3.googleusercontent.com/r0kKEZlekj2SAfut-EVltPLGdzeLTHStIiLcpoC5ZHzHUTGm5-AAauXzPC7RKdEKDx9hpY9K6Q=s900-c-k-c0x00ffffff-no-rj" 
+          type="image/x-icon"> 
   <title>Mr. Marshall</title>
 </head>
 <body>
