--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Mr. Marshall">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Professional video editor!">
-  <meta property="og:image" content="4cf52c6a7509575b8d4a1901b9ed1b1d.png">
+  <meta property="og:image" content="https://yt3.googleusercontent.com/r0kKEZlekj2SAfut-EVltPLGdzeLTHStIiLcpoC5ZHzHUTGm5-AAauXzPC7RKdEKDx9hpY9K6Q=s900-c-k-c0x00ffffff-no-rj">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1280">
   <meta property="og:image:height" content="800">
