--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
   
   <div class="yt">
-    <a href="youtube.com">
+    <a href="youtube.com/404">
       <i class='fab fa-youtube' style='font-size:30px;color:red'></i>
     </a>
   </div>
